--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     - The freeCodeCamp Team
 
     -->
-  Hello World!
+  Hello World, we are software developers!
   <script src="js/index.js"></script>
 </body>
 
