--- a/index.html
+++ b/index.html
@@ -11,19 +11,66 @@
   <script
     src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 
-  <!--
+  <h1 id="title">FreeCodeCamp Survey Form</h1>
+  <p id="description">Thank you for taking the time to help us improve the
+    platform</p>
 
-    Hello Camper!
+  <div class="form">
+    <form id="survey-form">
+      <label for="name" id="name-label">Name</label>
+      <input type="text" id="name" placeholder="Enter your name" />
+      <label for="email" id="email-label">Email</label>
+      <input type="email" id="email" placeholder="Enter your email" />
+      <label for="age" id="number-label">Age(Optional)</label>
+      <input type="number" id="number" placeholder="Enter your name" min="10"
+        max="99" />
+      <label for="dropdown">What option best describes your current
+        role?</label>
+      <select id="dropdown">
+        <option value="" disabled selected>Select current role</option>
+        <option value="student">Student</option>
+        <option value="full-time-job">Full Time Job</option>
+        <option value="full-time-learner">Full Time Learner</option>
+        <option value="prefer-not-to-say">Prefer not to say</option>
+        <option value="other">Other</option>
+      </select>
+      <label>Would you recommend freeCodeCamp to a friend?
+      </label>
+      <div class="recommendation">
 
-    For now, the test suite only works in Chrome!
-    Please read the README below in the JS Editor before beginning.
-    Feel free to delete this message once you have read it.
-    Good luck and Happy Coding!
+        <div>
+          <input type="radio" id="definately" value="Definately"
+            name="recommend-friend">
+          <label for="definately">Definately</label>
+        </div>
+        <div>
 
-    - The freeCodeCamp Team
+          <input type="radio" id="maybe" value="Maybe" name="recommend-friend">
+          <label for="maybe">Maybe</label>
+        </div>
+        <div>
+          <input type="radio" id="not-sure" value="Not sure"
+            name="recommend-friend">
+          <label for="not-sure">Not sure</label>
+        </div>
 
-    -->
-  Hello World, we are software developers!
+      </div>
+      <label for="dropdown">What is your favorite feature of
+        freeCodeCamp?</label>
+      <select id="dropdown">
+        <option value="" disabled selected>Select an option</option>
+        <option value="Challenges">Challenges</option>
+        <option value="Projects">Projects</option>
+        <option value="Community">Community</option>
+        <option value="Open Source">Open Source</option>
+
+      </select>
+      <div>
+        <label>What would you like to see improved</label>
+      </div>
+
+    </form>
+  </div>
   <script src="js/index.js"></script>
 </body>
 
