--- a/index.html
+++ b/index.html
@@ -65,10 +65,43 @@
         <option value="Open Source">Open Source</option>
 
       </select>
-      <div>
-        <label>What would you like to see improved</label>
-      </div>
+   
+ 
+          <label>What would you like to see improved</label>
+       
+            <div>
+              <input type="checkbox" id="Front-end Projects" name="Front-end Projects">
+              <label for="Front-end Projects">Front-end Projects</label>
+            </div>
+            <div>
+              <input type="checkbox" id="Back-end Projects" name="Back-end Projects">
+              <label for="Back-end Projects">Back-end Projects"</label>
+            </div>
+            <div>
+              <input type="checkbox" id="Data Visualization" name="Data Visualization">
+              <label for="Data Visualization">Data Visualization</label>
+            </div>
+            <div>
+              <input type="checkbox" id="Challenges" name="Challenges">
+              <label for="Challenges">Front-end Projects</label>
+            </div>
+            <div>
+              <input type="checkbox" id="Open Source Community" name="Open Source Community">
+              <label for="Challenges">Open Source Community</label>
+            </div>
+            <div>
+              <input type="checkbox" id="Gitter help rooms" name="Gitter help rooms">
+              <label for="Challenges">Gitter help rooms</label>
+            </div>
+            <div>
+              <input type="checkbox" id="Videos" name="Videos">
+              <label for="Videos">Gitter help rooms</label>
+            </div>
 
+            <label>Any comments or suggestions?</label>
+            <textarea name="suggestions" id="" cols="30" rows="10" placeholder="Enter your comment here" ></textarea>
+   
+            <input type="submit" value="Submit">
     </form>
   </div>
   <script src="js/index.js"></script>
